# benchmarking

./: flake.nix  giftcard-shared-services.json.invalid  pyproject.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 2g61az7xfng354qcphrf2svmljcpz2l6-source  qvkzwk5awk8np49w7yd8alisl316l2dr-source
