[tool.poetry]
name = "benchmarking"
version = "0.1.0"
description = ""
authors = ["Alex Jackson <contact@ajaxbits.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.24.1"
matplotlib = "^3.6.3"
scipy = "^1.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
